--- a/packages/iac/package.json
+++ b/packages/iac/package.json
@@ -25,6 +25,8 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.85.0",
+    "@aws-cdk/aws-lambda": "^1.85.0",
     "@aws-cdk/core": "^1.85.0",
     "api": "0.0.0",
     "source-map-support": "^0.5.19"
